[project]
name = "untitled-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.2",
    "google-generativeai>=0.8.3",
    "markitdown>=0.0.1a3",
    "numpy>=2.2.1",
    "sentence-transformers>=3.3.1",
]
